compiler/tests/ar/errors/pure_fnval.salam
// لغة: العربية
// توقع: E012
نقي دالة طبق(ح : دالة (صحيح) صحيح, قيمة : صحيح) : صحيح:
    أرجع ح(قيمة)
نهاية

دالة الرئيسية:
    خ := (مقدار : صحيح) => مقدار + 1
    اطبع طبق(خ, 4)
نهاية
